--- a/demo/index-en.html
+++ b/demo/index-en.html
@@ -54,6 +54,7 @@
     </div>
   </form>
 
+  <center>(<a href="./index.html">简体中文</a> | <a href="./index-en.html">English</a>)</center>
   
 </body>
 
