--- a/demo/index-en.html
+++ b/demo/index-en.html
@@ -12,7 +12,7 @@
     <div class='formLine'>
       <span class="l">File:</span>
       <div class="r file-r">
-        <p>Select a file: <input type="file" name='file' accept="image/jpeg;image/gif;image/png;image/bmp;image/webp;"></p>
+        <p>Select a file: <input type="file" name='file' accept="image/jpeg,image/gif,image/png,image/bmp,image/webp"></p>
         <p>or</p>
         <p>Input a URL: <input type="text" name="url"></p>
       </div>
