--- a/demo/index.html
+++ b/demo/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,7 +12,7 @@
     <div class='formLine'>
       <span class="l">文件:</span>
       <div class="r file-r">
-        <p>选择一个文件: <input type="file" name='file' accept="image/jpeg;image/gif;image/png;image/bmp;image/webp;"></p>
+        <p>选择一个文件: <input type="file" name='file' accept="image/jpeg,image/gif,image/png,image/bmp,image/webp"></p>
         <p>或者</p>
         <p>输入一个网址: <input type="text" name="url"></p>
       </div>
