--- a/demo/index.html
+++ b/demo/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>图片转换为 icon 图标</title>
+  <meta name = "keywords" content="icon,转换,图片,ico" />
+  <meta name= "description" content="图片转换为 icon 图标 在线转换" />
   <link rel="stylesheet" href="./css.css">
 </head>
 <body>
