--- a/demo/index-en.html
+++ b/demo/index-en.html
@@ -61,7 +61,7 @@
 </body>
 
 <script type="module">
-  import {img2ico} from '../imageToIcon.js'
+  import {img2ico} from './imageToIcon.js'
   const f = document.querySelector('#form')
   const btn = f.querySelector('#b')
 
