--- a/demo/index-en.html
+++ b/demo/index-en.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Image to Icon Converter</title>
-  <meta name = "keywords" content="icon,convert,image,ico" />
-  <meta name= "description" content="Image to Icon Converter" />
+  <meta name = "keywords" content="icon,convert,image,ico">
+  <meta name= "description" content="Image to Icon Converter">
   <link rel="stylesheet" href="./css.css">
 </head>
 <body>
